[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entities/Interface/StartScreen/FindGamesForm.gd" type="Script" id=1]

[node name="FindGamesForm" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 356.0
margin_top = 266.0
margin_right = 444.0
margin_bottom = 334.0

[node name="New Game" type="Button" parent="VBoxContainer"]
margin_right = 88.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "New Game"

[node name="Find Games" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 88.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Find Games"

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 88.0
margin_bottom = 68.0
text = "Exit"

[connection signal="pressed" from="VBoxContainer/New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/Find Games" to="." method="_on_Find_Games_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
